# product_waitlist

./: Cargo.toml  README.md  credentials.env
src/: main.rs
src/api_handler/: request_handler.rs
src/db_handler/: db_manipulation.rs  mod.rs
src/template/: entry_template.rs  mod.rs
